# Kaggle

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
docs/: conventions.md  roadmap.md
projects/: __init__.py
projects/lego_database/: README.md  __init__.py
projects/lego_database/configs/: baseline.yaml
projects/lego_database/notebooks/: 01_eda.ipynb  02_features.ipynb  03_modeling.ipynb  README.md
projects/lego_database/src/: __init__.py  dataset.py  features.py  train.py
projects/lego_database/tests/: test_features.py
src/kaggle_lab/: __init__.py
src/kaggle_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/kaggle_lab/cli/: __init__.py  new_project.py
src/kaggle_lab/common/: __init__.py  io.py  metrics.py  plotting.py  preprocess.py  splits.py  validation.py
tests/common/: test_validation.py
